fix: priming for powertools-tracing